# bm_protocol

./: .clang-format  .env.example  .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  BuildOptions.cmake  CMakeLists.txt  CMakePresets.json  DEVELOPER.md  ENV_SETUP.md  README.md  environment.yml  environment_ci.yml
src/: CMakeLists.txt
src/apps/: README.md
src/apps/adin_test/: CMakeLists.txt  app_main.cpp  app_pub_sub.h  bm_config.c  bm_config.h  bm_l2.c  bm_l2.h  external_flash_partitions.c  external_flash_partitions.h  lwipopts.h  sensors.h  task_priorities.h
src/apps/blinky/: CMakeLists.txt  FreeRTOSConfig.h  app_main.cpp  lwip_support.c  lwipopts.h  task_priorities.h
src/apps/bm_devkit/: BMDK_README.md
src/apps/bm_soft_module/: CMakeLists.txt  app_main.cpp  bm_config.c  task_priorities.h
src/apps/bootloader/: CMakeLists.txt  FreeRTOS.h  README.md  app_main.c  ed25519_key.pem  keygen.sh  keys.c  x25519_key.pem
src/apps/bridge/: CMakeLists.txt  FreeRTOSConfig.h  aanderaaController.cpp  aanderaaController.h  app_config.cpp  app_config.h  app_main.cpp  app_pub_sub.h  bridgeLog.cpp  bridgeLog.h  bridgePowerController.cpp  bridgePowerController.h  cbor_sensor_report_encoder.cpp  cbor_sensor_report_encoder.h  memfault_platform_config.h  network_config_logger.cpp  network_config_logger.h  rbrPressureProcessor.cpp  rbrPressureProcessor.h  reportBuilder.cpp  reportBuilder.h  sensorController.cpp  sensorController.h  sm_config_crc_list.cpp  sm_config_crc_list.h  task_priorities.h  topology_sampler.cpp  topology_sampler.h
src/apps/bringup/: CMakeLists.txt  FreeRTOSConfig.h  app_main.cpp  external_flash_partitions.h  task_priorities.h
src/apps/bringup_bridge/: CMakeLists.txt  FreeRTOSConfig.h  app_main.cpp  bm_config.c  external_flash_partitions.c  external_flash_partitions.h  task_priorities.h
src/apps/bringup_bristlefin/: CMakeLists.txt  app_main.cpp  task_priorities.h
src/apps/bringup_mote/: CMakeLists.txt  app_main.cpp  task_priorities.h
src/apps/bristleback_apps/: BRISTLEBACK_README.md
src/apps/example_skeleton/: CMakeLists.txt  FreeRTOSConfig.h  app_main.cpp  app_pub_sub.h  task_priorities.h
src/apps/hydrophone_demo/: CMakeLists.txt  app_main.cpp  hydrophone_demo.yaml  task_priorities.h
src/apps/mote_bristlefin/: CMakeLists.txt  app_main.cpp  external_flash_partitions.c  task_priorities.h
src/apps/rs232_test/: CMakeLists.txt  app_main.cpp  bm_config.h  task_priorities.h
src/apps/soft_app/: CMakeLists.txt  app_main.cpp  task_priorities.h
src/bsp/: .gitignore
src/bsp/bm_mote_bristleback_v1_0/: CMakeLists.txt  bm_mote_bristleback_v1_0.ioc  bsp.cpp  bsp.h  bsp_pins.c
src/bsp/bm_mote_rs232/: CMakeLists.txt  bm_mote_rs232.ioc  bsp.cpp  bsp.h  bsp_pins.c
src/bsp/bm_mote_soft_v1_0/: bm_mote_bristleback_v1_0.ioc  bm_mote_soft_v1_0.ioc  bsp.cpp  bsp_pins.c
src/bsp/bm_mote_spi_v1_0/: CMakeLists.txt  bm_mote_spi_v1_0.ioc  bsp.cpp  bsp.h
src/bsp/bm_mote_v1.0/: CMakeLists.txt  bm_mote_v1.0.ioc  bsp.cpp  bsp.h  bsp_pins.c
src/bsp/bm_mote_v1.0_adin1100/: CMakeLists.txt  bm_mote_v1.0.ioc  bsp.h  bsp_pins.c
src/bsp/bootloader/: CMakeLists.txt  bootloader.ioc  bsp.h
src/bsp/bridge_v1_0/: CMakeLists.txt  bridge_v1_0.ioc  bsp.cpp  bsp.h  bsp_pins.c
src/bsp/dev_mote_bristlefin/: bsp.h  bsp_pins.c  devmote_v1.0.ioc
src/bsp/dev_mote_bristlefin_v1_0/: CMakeLists.txt  bsp.cpp  bsp.h  bsp_pins.c  devmote_bristlefin_v1_0.ioc
src/bsp/dev_mote_hydrophone/: CMakeLists.txt  bsp.cpp  bsp.h  bsp_pins.c  dev_mote_hydrophone.ioc
src/bsp/dev_mote_v1_0/: CMakeLists.txt  bsp.cpp  bsp.h  bsp_pins.c  devmote_v1.0.ioc
src/bsp/nucleo_u575/: CMakeLists.txt  bsp.c  bsp.cpp  bsp.h  nucleo_u575.ioc
src/lib/: CMakeLists.txt
src/lib/bcmp/: CMakeLists.txt  bcmp.c  bcmp.cpp  bcmp.h  bcmp_cli.c  bcmp_cli.cpp  bcmp_cli.h  bcmp_config.cpp  bcmp_config.h  bcmp_heartbeat.c  bcmp_heartbeat.cpp  bcmp_heartbeat.h  bcmp_info.cpp  bcmp_info.h  bcmp_lib.h  bcmp_linked_list_generic.cpp  bcmp_linked_list_generic.h  bcmp_messages.h  bcmp_neighbors.c  bcmp_neighbors.cpp  bcmp_neighbors.h  bcmp_ping.cpp  bcmp_ping.h  bcmp_platform.h  bcmp_platform_hooks.c  bcmp_protocol_caps.h  bcmp_resource_discovery.cpp  bcmp_resource_discovery.h  bcmp_time.cpp  bcmp_time.h  bcmp_topology.cpp  bcmp_topology.h
src/lib/bm_integration/: CMakeLists.txt  bcmp_cli.cpp  bcmp_cli.h  bcmp_messages.h  bm_config.h  bm_ports.h  bm_printf.cpp  bm_printf.h  bristlemouth_client.cpp  bristlemouth_client.h
src/lib/bm_ncp/: CMakeLists.txt  debug_ncp.cpp  debug_ncp.h  ncp.cpp  ncp.h  ncp_config.cpp  ncp_config.h  ncp_dfu.cpp  ncp_dfu.h  ncp_messages.h  ncp_uart.cpp  ncp_uart.h
src/lib/bridge/: bridgePowerController.cpp  bridgePowerController.h
src/lib/bristlefin/: bristlefin.cpp  bristlefin.h  payload_uart.cpp  payload_uart.h
src/lib/cli/: cli.c  cli.h
src/lib/common/: Exo3LineParser.cpp  Exo3LineParser.h  LineParser.cpp  LineParser.h  OrderedKVPLineParser.cpp  OrderedKVPLineParser.h  OrderedSeparatorLineParser.cpp  OrderedSeparatorLineParser.h  POST_TX_EDGE_CASES.md  app_util.h  array_utils.h  avgSampler.cpp  avgSampler.h  bm_usart.h  bootloader_helper.c  bootloader_helper.h  device_info.c  device_info.h  differenceSignal.cpp  differenceSignal.h  io.h  (+54 more)
test/: CMakeLists.txt
test/header_overrides/: FreeRTOSConfig.h  app_pub_sub.h  bm_config.h  bm_l2.h  bm_serial.h  debug.h  eth_adin2111.h  portmacro.h  rebootctl_config.h  stm32_io.h  stm32u5xx.h  task_priorities.h
test/mocks/: bm_config.h  mock_FreeRTOS.h  mock_bm_network.h  mock_bm_serial.h  mock_bridgeLog.h  mock_configuration.h  mock_device_info.h  mock_lpm.h  mock_mcu_boot.h  mock_reset_reason.h  mock_stm32_rtc.h  mock_storage_driver.h  mock_timer_callback_handler.h  mock_uptime.h
test/src/: CMakeLists.txt
test/stubs/: FreeRTOSStubs.c  mock_FreeRTOS.c  mock_aanderaaController.cpp  mock_bm_l2.cpp  mock_bm_network.cpp  mock_bm_serial.cpp  mock_bridgeLog.cpp  mock_device_info.cpp  mock_lpm.cpp  mock_mcu_boot.cpp  mock_reset_reason.cpp  mock_sensorController.cpp  mock_stm32_rtc.cpp  mock_timer_callback_handler.cpp  mock_uptime.cpp  stm32_io.c
(+682 files in other folders)
